deploy/production/envoy/bootstrap.yaml
node:
  cluster: kubebrain-envoy
  id: kubebrain-envoy

static_resources:
  listeners:
    - name: kubebrain-client
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 2379
      per_connection_buffer_limit_bytes: 1048576
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: kubebrain_downstream
                codec_type: AUTO
                stream_idle_timeout: 0s
                request_timeout: 0s
                use_remote_address: true
                normalize_path: true
                merge_slashes: true
                route_config:
                  name: kubebrain
                  virtual_hosts:
                    - name: kubebrain
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: kubebrain
                            timeout: 0s
                            idle_timeout: 0s
                            max_stream_duration:
                              max_stream_duration: 0s
                              grpc_timeout_header_max: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: kubebrain
      type: STRICT_DNS
      connect_timeout: 5s
      dns_lookup_family: V4_ONLY
      per_connection_buffer_limit_bytes: 1048576
      load_balancing_policy:
        policies:
          - typed_extension_config:
              name: envoy.load_balancing_policies.round_robin
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin
      load_assignment:
        cluster_name: kubebrain
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kubebrain-envoy-upstream.kubebrain-system.svc.cluster.local
                      port_value: 3379
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            idle_timeout: 0s
          explicit_http_config:
            http2_protocol_options:
              max_concurrent_streams: 2147483647
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 1024
            max_pending_requests: 1024
            max_requests: 20000
            max_retries: 3
      outlier_detection:
        split_external_local_origin_errors: true
        consecutive_local_origin_failure: 5
        interval: 5s
        base_ejection_time: 30s
        max_ejection_time: 300s
        max_ejection_percent: 67

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
